@@ -1,4 +1,5 @@
 #!/usr/bin/env python
+# -*- coding: utf-8 -*-
 
 
 ########################################################################
@@ -55,11 +56,6 @@ import sys
 import os.path
 from vitables.vtSite import *
 
-# Location of Qt and PyQt libraries in Windows systems
-if sys.platform.startswith('win'):
-    PYQT_DIR = os.path.join(INSTALLDIR, 'pyqt')
-    sys.path = [os.path.normpath(PYQT_DIR)] + sys.path
-
 from PyQt4.QtCore import *
 from PyQt4.QtGui import *
 
@@ -81,7 +77,7 @@ def main(args):
     # domains to identify themselves
     app.setOrganizationDomain('vitables.org')
     app.setApplicationName('ViTables')
-    app.setApplicationVersion(vtconfig.__version__)
+    app.setApplicationVersion(vtconfig.getVersion())
     config = vtconfig.Config()
 
     # Localize the application using the system locale
